[tool.poetry]
name = "sqlalchemy-crud"
repository = "https://github.com/cblack34/sqlalchemy-crud"
version = "v0.1.0-beta"
description = "Basic C.R.U.D for SQLAlchemy models"
authors = ["Clayton Black"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cblack34/sqlalchemy-crud/issues"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.19"
py = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
