[tool.poetry]
name = "sqlalchemy-crud"
repository = "https://github.com/cblack34/sqlalchemy-crud"
version = "0.1.2"
description = "Basic C.R.U.D for SQLAlchemy models"
authors = ["Clayton Black"]
license = "MIT"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cblack34/sqlalchemy-crud/issues"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.19"
py = "^1.11.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pylint = "^2.17.4"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
